--- a/index.html
+++ b/index.html
@@ -20,18 +20,18 @@ limitations under the License. -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>网易云音乐下载</title>
-    <link rel="shortcut icon" href="./fvcicon/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="./css/index.css">
+    <link rel="shortcut icon" href="fvcicon/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="css/index.css">
 </head>
 
 <body>
-    <a href="https://music.163.com/" target="_blank"><img src="./images/logo.png" draggable="false"></a>
+    <a href="https://music.163.com/" target="_blank"><img src="images/logo.png" draggable="false"></a>
     <div class="app">
         <input type="text" placeholder="输入音乐的复制链接">
         <button class="down">下载</button>
     </div>
     <footer class="col-lg-12 copyright-footer">copyright &copy; 2022.08.25 HaoranZing</footer>
-    <script src="./js/main.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
