--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ limitations under the License. -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>网易云音乐下载</title>
-    <link rel="shortcut icon" href="fvcicon/favicon.ico" type="x-icon">
+    <link rel="shortcut icon" href="favicon.ico" type="x-icon">
     <link rel="stylesheet" href="index.css">
 </head>
 
